# midas-journal-298

Decimation/: CMakeLists.txt  itkQuadEdgeMeshQuadricDecimationTest.cxx  itkQuadEdgeMeshSquaredEdgeLengthDecimationTest.cxx
Decimation/data/: wave.vtk
Decimation/doc/: decimation.bib  decimation.tex
Decimation/doc/fig/.svn/: entries
Decimation/doc/fig/.svn/text-base/: bunny_comp.png.svn-base  merge1.png.svn-base  merge2.png.svn-base
